도서 검색, 도서 상세 검색 리팩토링